trunk/Archive2/78/3f445685a49865/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:3:10: error: 'CFoo' has not been declared
     void CFoo::fooMethod()
          ^
